src/objects/SAP_Item__c/SAP_Item__c.object-meta.xml
<CustomObject>
    <label>SAP Item</label>
    <nameField>
        <label>SAP Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SAP Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>