src/objects/SAP_Item__c/fields/GDMFSL_ATS_Reactive_Labor_Costs__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_ATS_Reactive_Labor_Costs__c</fullName>
    <label>ATS: Reactive Labor Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>