src/objects/SAP_Item__c/fields/GDMFSL_Item_Category__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Item_Category__c</fullName>
    <label>Item Category</label>
    <length>45</length>
    <type>Text</type>
</CustomField>