src/objects/SAP_Item__c/fields/GDMFSL_Net_Price__c.field-meta.xml
<CustomField>
    <fullName>GDMFSL_Net_Price__c</fullName>
    <label>Net Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>